name:                Nokee
version:             0.1.0
synopsis:            Utility for managing plaintext notes
description:         Please see README.md
homepage:            http://github.com/mtesseract/nokee#readme
license:             BSD3
license-file:        LICENSE
author:              Moritz Schulte
maintainer:          mtesseract@silverratio.net
copyright:           Moritz Schulte
category:            value
build-type:          Simple
cabal-version:       >=1.10

executable nokee
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:        -Wall
  default-language:    Haskell2010
  build-depends:       MissingH >= 1.3.0.1
                     , base >= 4.7 && < 5
                     , directory >= 1.2.2.0
                     , filepath >= 1.4.0.0
                     , optparse-applicative >= 0.11.0.2
                     , process >= 1.2.3.0
                     , sqlite-simple
                     , temporary >= 1.2.0.3
                     , time >= 1.5.0.1
                     , unix >= 2.7.1.0
                     , regex-tdfa >= 1.2.1
                     , time >= 1.5.0.1
  other-modules:       Nokee
                     , Utilities
